# business-analyzer

./: .env.example  .gitignore  README.md  auth_utils.py  celery_app.py  config.py  docker-compose.yml  main.py  pyproject.toml
ai/: __init__.py  ai_service.py
ai/gemini/: __init__.py  chatbot.py  company_analysis.py  config.py  example.py  investment_rationale.py  news_summary.py  sentiment.py
ai/providers/: gemini.py  huggingface.py  openai.py
assets/css/: main.css
assets/js/: main.js
db/: __init__.py  connection.py  sql_utils.py
prompts/: __init__.py
routes/: admin.py  api.py  auth.py  base.py  dashboard.py  pages.py
services/: asset_service.py  chatbot_service.py  company_service.py  recommendation_engine.py  user_service.py  watchlist_service.py
sql/: chatbot.sql  schema.sql  seed_data.sql
tasks/: __init__.py  recommendations.py  scraping.py  sentiment.py  stock_data.py
templates/: 404.html  admin.html  admin_asset_form.html  admin_assets.html  admin_companies.html  admin_company_detail.html  admin_company_form.html  admin_content.html  admin_create_secret.html  admin_user_form.html  admin_users.html  asset-detail.html  company-detail.html  dashboard.html  documentation.html  index.html  login.html  news.html  privacy.html  register.html  search.html  support.html  terms.html  watchlist.html
templates/components/: footer.html  navigation.html  script.html
utils/: helpers.py
